# FNAF3-CPP

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  cmakesetup.bat
src/: main.cpp
src/common/: common.cpp  common.hpp  log.cpp  log.hpp
src/core/: game.cpp  game.hpp  input.cpp  input.hpp  state.hpp  timer.cpp  timer.hpp  viewport.cpp  viewport.hpp
src/core/helpers/: random.cpp  random.hpp
src/core/objects/: basic.hpp  group.hpp  sprite.hpp  text.hpp
src/core/rendering/: all.hpp  colour.cpp  colour.hpp  gl2d.cpp  gl2d.hpp  image.cpp  image.hpp  shapes.cpp  shapes.hpp  text.cpp  text.hpp
src/game/: asset.cpp  asset.hpp  data.cpp  data.hpp  gameObject.cpp  gameObject.hpp
src/game/states/: gameState.cpp  gameState.hpp  nightState.cpp  nightState.hpp  testState.cpp  testState.hpp  titleState.cpp  titleState.hpp
